--- a/complex-react-app/package.json
+++ b/complex-react-app/package.json
@@ -16,9 +16,11 @@
     "@babel/preset-react": "^7.12.1",
     "axios": "^0.21.0",
     "babel-loader": "^8.1.0",
+    "immer": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "use-immer": "^0.4.2",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
