--- a/complex-react-app/package.json
+++ b/complex-react-app/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
+    "react-tooltip": "^4.2.15",
     "use-immer": "^0.4.2",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
